--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
             <li><a href="#">Info</a></li>
             <li><a href="#">Courses</a></li>
             <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Contact Us</a></li>
         </ul>
     
     <h1>Catastrophicism</h1>
